@@ -20,6 +20,8 @@ package org.apache.hadoop.hdfs.server.datanode;
 import org.apache.hadoop.classification.InterfaceAudience;
 import org.apache.hadoop.classification.InterfaceStability;
 
+import java.util.Map;
+
 /**
  * This is the JMX management interface for data node information
  */
@@ -75,4 +77,9 @@ public interface DataNodeMXBean {
    * actively transferring blocks.
    */
   public int getXceiverCount();
+
+  /**
+   * Gets the network error counts on a per-Datanode basis.
+   */
+  public Map<String, Map<String, Long>> getDatanodeNetworkCounts();
 }
